[gd_scene load_steps=22 format=3 uid="uid://dj40kpeof30x5"]

[ext_resource type="PackedScene" uid="uid://c04omrr6yot0s" path="res://kirkja-assets/models/voxeling.glb" id="1_m18wj"]
[ext_resource type="Script" path="res://Worlds/Voxeland/Contexts/Voxeling/Voxeling.gd" id="1_xyc3q"]
[ext_resource type="PackedScene" uid="uid://bqhwut8qkg2a" path="res://Worlds/Voxeland/Contexts/Voxeling/UI/VoxelingUI.tscn" id="2_q4xq3"]
[ext_resource type="Script" path="res://Core/Utils/EscToQuit.gd" id="2_wv13h"]
[ext_resource type="PackedScene" uid="uid://wbrs5bitntau" path="res://Core/PlayerController/ThirdPerson/CameraRig.tscn" id="3_onvl2"]
[ext_resource type="PackedScene" uid="uid://baaftyjce75qb" path="res://kirkja-assets/models/CubeCage.glb" id="4_ovgtm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g8tkb"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yatec"]
animation = &"Idle rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p2c48"]
animation = &"Walk rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83aps"]
animation = &"Walk rig"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1vdjc"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vc5sr"]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h0qek"]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ur7i"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_suupy"]
"states/Idle rig/node" = SubResource("AnimationNodeAnimation_yatec")
"states/Idle rig/position" = Vector2(410, 76)
states/Start/position = Vector2(226, 76)
"states/Walk rig/node" = SubResource("AnimationNodeAnimation_83aps")
"states/Walk rig/position" = Vector2(602, 76)
"states/Walk rig 2/node" = SubResource("AnimationNodeAnimation_p2c48")
"states/Walk rig 2/position" = Vector2(221, 228)
transitions = ["Start", "Idle rig", SubResource("AnimationNodeStateMachineTransition_1vdjc"), "Idle rig", "Walk rig", SubResource("AnimationNodeStateMachineTransition_vc5sr"), "Walk rig", "Idle rig", SubResource("AnimationNodeStateMachineTransition_h0qek"), "Idle rig", "Walk rig 2", SubResource("AnimationNodeStateMachineTransition_5ur7i")]
graph_offset = Vector2(-30, -34)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_qmfbt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lo83m"]
radius = 0.041
height = 0.0857608

[sub_resource type="BoxShape3D" id="BoxShape3D_cykrc"]
size = Vector3(0.02, 0.05, 0.02)

[sub_resource type="Shader" id="Shader_p01f4"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.0.alpha14's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_disabled,diffuse_burley,specular_schlick_ggx,unshaded;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}


void fragment() {
	vec2 base_uv = UV;
	float l = length(base_uv - vec2(.5,.5));
	float amount = (1.0 + sin(5.0*TIME + 40.0*l))/2.0;
	//float amount = clamp((.5 - length(base_uv - vec2(.5,.5))), 0.0, 1.0);
	ALPHA = clamp(1.8*(0.5 - l), 0.0, 1.0);
	
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = amount * albedo.rgb * albedo_tex.rgb;
	
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	vec4 roughness_texture_channel = vec4(1.0,0.0,0.0,0.0);
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d4wt0"]
render_priority = 0
shader = SubResource("Shader_p01f4")
shader_parameter/albedo = Color(0.243137, 1, 1, 1)
shader_parameter/metallic = 0.0
shader_parameter/metallic_texture_channel = Plane(1, 0, 0, 0)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/specular = 0.5
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_acob2"]
material = SubResource("ShaderMaterial_d4wt0")
size = Vector2(0.1, 0.1)

[node name="Voxeling" type="CharacterBody3D"]
collision_mask = 17
script = ExtResource("1_xyc3q")
block_collision_mask = 16
SPEED = 0.4
SPRINT_SPEED = 0.8
JUMP_VELOCITY = 2.0
GRAVITY_MULTIPLIER = 1.7

[node name="VoxelingUI" parent="." instance=ExtResource("2_q4xq3")]

[node name="Esc" type="Node" parent="."]
script = ExtResource("2_wv13h")

[node name="FallDetector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0135206, 0)
target_position = Vector3(0, -0.17, 0)
collision_mask = 16

[node name="PlayerMesh" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="voxeling" parent="PlayerMesh" instance=ExtResource("1_m18wj")]
transform = Transform3D(0.642589, 0, -1.12354e-07, 0, 0.642589, 0, 1.12354e-07, 0, 0.642589, 0, 0, 0)

[node name="Skeleton3D" parent="PlayerMesh/voxeling/ctrl_rig" index="0"]
bones/2/rotation = Quaternion(0, 0.0920824, 0, 0.995751)
bones/3/rotation = Quaternion(0, 0.0955855, 0, 0.995421)
bones/4/rotation = Quaternion(-0.4992, -0.503214, -0.496936, 0.50063)
bones/5/rotation = Quaternion(-0.00845723, 0.00242105, 0.0011225, 0.999961)
bones/6/rotation = Quaternion(0.00460517, -5.2089e-06, 0.00138116, 0.999988)
bones/7/position = Vector3(0.00670773, 0.0124832, 0.00473603)
bones/7/rotation = Quaternion(-1.05856e-14, -4.54744e-12, -0.00233289, 0.999997)
bones/8/position = Vector3(-0.00711697, 0.0125477, 0.00473603)
bones/8/rotation = Quaternion(-1.05856e-14, -4.54744e-12, -0.00233289, 0.999997)
bones/9/position = Vector3(0.0121038, 0.00733784, -0.00901323)
bones/9/rotation = Quaternion(-3.30834e-10, -3.27663e-10, -0.710504, 0.703693)
bones/10/rotation = Quaternion(-0.4992, 0.503214, 0.496936, 0.50063)
bones/11/rotation = Quaternion(-0.00845723, -0.00242105, -0.0011225, 0.999961)
bones/12/rotation = Quaternion(0.00460517, 5.2089e-06, -0.00138116, 0.999988)
bones/13/position = Vector3(-0.00670773, 0.0124832, 0.00473603)
bones/13/rotation = Quaternion(-1.05856e-14, 4.54744e-12, 0.00233289, 0.999997)
bones/14/position = Vector3(0.00705734, 0.0124381, 0.00473603)
bones/14/rotation = Quaternion(-1.05856e-14, 4.54744e-12, 0.00233289, 0.999997)
bones/15/position = Vector3(-0.0121038, 0.00733783, -0.00901323)
bones/15/rotation = Quaternion(-3.30834e-10, 3.27663e-10, 0.710504, 0.703693)
bones/16/rotation = Quaternion(-3.13916e-07, 0, 1, 0)
bones/17/position = Vector3(1.27359e-08, 0.0145457, -0.0202855)
bones/18/rotation = Quaternion(3.13916e-07, 0, 1, 0)
bones/21/rotation = Quaternion(-3.13916e-07, 0, 1, 0)
bones/23/rotation = Quaternion(0, 0.0920824, 0, 0.995751)
bones/30/rotation = Quaternion(0, 0.0955855, 0, 0.995421)
bones/35/position = Vector3(0.00709894, 0.0124387, 0.0047453)
bones/37/rotation = Quaternion(3.13916e-07, 0, 1, 0)

[node name="skin" parent="PlayerMesh/voxeling/ctrl_rig/Skeleton3D" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
lod_bias = 128.0
surface_material_override/0 = SubResource("StandardMaterial3D_g8tkb")

[node name="HangDetector" type="RayCast3D" parent="PlayerMesh"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.0454127, 0)
target_position = Vector3(0, 0, 0.1)
collision_mask = 16

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_suupy")
anim_player = NodePath("../PlayerMesh/voxeling/AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_qmfbt")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0439155, 0)
shape = SubResource("CapsuleShape3D_lo83m")

[node name="Drill" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0241113, 0)
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="Drill"]
shape = SubResource("BoxShape3D_cykrc")

[node name="Bump" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0372854, 0)
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0857974, -0.0840286)
shape = SubResource("BoxShape3D_cykrc")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Bump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0849009, 0.0857974, 0.000872374)
shape = SubResource("BoxShape3D_cykrc")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Bump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0848151, 0.0857974, 0.00641019)
shape = SubResource("BoxShape3D_cykrc")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Bump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0011128, 0.0857974, 0.0823687)
shape = SubResource("BoxShape3D_cykrc")

[node name="CameraRig" parent="." instance=ExtResource("3_onvl2")]
_min_cam_distance = 0.1
standalone = true
ROTATION_SPEED = 0.01

[node name="CameraPlacements" parent="CameraRig" index="0"]
proxy_fps = Vector3(0, 0.08, 0)
proxy_over = Vector3(0, 0.11, 0)
proxy_right = Vector3(-0.1, 0.1, 0)
proxy_left = Vector3(0.1, 0.1, 0)
proxy_back = Vector3(0, 0.05, -0.06)

[node name="SpringArm3D" parent="CameraRig/Target" index="0"]
collision_mask = 16777198

[node name="VoxelSelectorRay" type="RayCast3D" parent="CameraRig/Target/SpringArm3D" index="1"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, -1.42109e-14, 0, -1.24235e-21)
visible = false
enabled = false
target_position = Vector3(0, -0.208, 0)

[node name="Indicator" type="Node" parent="."]

[node name="Potential" type="MeshInstance3D" parent="Indicator"]
mesh = SubResource("PlaneMesh_acob2")

[node name="ActiveBlock" type="Node" parent="."]

[node name="CubeCage" type="Node3D" parent="ActiveBlock"]
visible = false

[node name="CubeCageMesh" parent="ActiveBlock/CubeCage" instance=ExtResource("4_ovgtm")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)

[connection signal="body_entered" from="Drill" to="." method="_on_drill_body_entered"]
[connection signal="body_entered" from="Bump" to="." method="_on_bump_body_entered"]

[editable path="PlayerMesh/voxeling"]
[editable path="CameraRig"]
